# grafana-materialize-datasource

./: CHANGELOG.md  DEVELOPING.md  Dockerfile  README.md  docker-compose.yaml  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
backend/: Cargo.toml  Dockerfile
backend/src/: convert.rs  data.rs  diagnostics.rs  error.rs  lib.rs  main.rs  path.rs  queries.rs  request.rs  resource.rs  stream.rs
provisioning/datasources/: datasources.yaml
src/: ConfigEditor.tsx  QueryEditor.tsx  VariableQueryEditor.tsx  datasource.ts  module.ts  plugin.json  types.ts
src/dashboards/: getting-started.json
src/img/: getting-started.webm
xtask/: Cargo.toml
xtask/src/: main.rs
