[package]
name = "grafana-materialize-datasource"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
authors = [
  "Ben Sully <ben.sully@grafana.com>",
]

[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
futures-core = "0.3.21"
futures-util = "0.3.21"
# grafana-plugin-sdk = "0.1.0"
grafana-plugin-sdk = { git = "https://github.com/grafana/grafana-plugin-sdk-rust", branch = "main" }
http = "0.2.6"
md5 = "0.7.0"
rand = "0.8.5"
rust_decimal = { version = "1.22.0", features = ["db-tokio-postgres"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "1.12.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "time"] }
tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-stream = "0.1.8"
tonic = "0.6.2"
tracing = "0.1.31"

[features]
