[package]
name = "grafana-materialize-datasource"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
authors = [
  "Ben Sully <ben.sully@grafana.com>",
]

[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
futures-core = "0.3.21"
futures-util = "0.3.21"
grafana-plugin-sdk = "0.3.0"
http = "0.2.7"
md5 = "0.7.0"
rand = "0.8.5"
rust_decimal = { version = "1.23.1", features = ["db-tokio-postgres"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
serde_with = "1.13.0"
thiserror = "1.0.31"
tokio = { version = "1.18.0", features = ["rt-multi-thread", "time"] }
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-stream = "0.1.8"
tonic = "0.7.1"
tracing = "0.1.34"

[features]
